--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/usergroupList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/users/usergroupList.xhtml
@@ -17,6 +17,7 @@
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:p="http://primefaces.org/ui">
     <p:dataTable var="item"
+                 id="userGroupsTable"
                  value="#{BenutzergruppenForm.lazyDTOModel}"
                  lazy="true"
                  paginator="true"
