--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsersPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsersPopup.xhtml
@@ -36,7 +36,7 @@
                     </p:column>
                     <p:column headerText="#{msgs.auswahl}">
                         <p:commandLink id="addUser" action="#{ProzessverwaltungForm.addUser}"
-                                       update="taskEditForm:tabs:taskUserTable">
+                                       update="taskEditForm:tabs:userTable">
                             <h:graphicImage alt="add task to user" value="/pages/images/buttons/addUser.gif"/>
                             <f:param name="ID" value="#{user.id}"/>
                         </p:commandLink>
