--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/details.xhtml
@@ -47,7 +47,7 @@
         <p:row>
             <div>
                 <p:outputLabel for="ruleset" value="#{msgs.regelsatz}"/>
-                <p:selectOneMenu id="ruleset" value="#{ProzessverwaltungForm.process.ruleset}" required="true" converter="RegelsatzConverter">
+                <p:selectOneMenu id="ruleset" value="#{ProzessverwaltungForm.process.ruleset}" required="true" converter="#{rulesetConverter}">
                     <f:selectItems value="#{HelperForm.regelsaetze}"/>
                     <p:ajax event="change"/>
                 </p:selectOneMenu>
@@ -55,7 +55,7 @@
 
             <div>
                 <p:outputLabel for="docket" value="#{msgs.docket}"/>
-                <p:selectOneMenu id="docket" value="#{ProzessverwaltungForm.process.docket}" required="true" converter="DocketConverter">
+                <p:selectOneMenu id="docket" value="#{ProzessverwaltungForm.process.docket}" required="true" converter="#{docketConverter}">
                     <f:selectItems value="#{HelperForm.dockets}"/>
                     <p:ajax event="change"/>
                 </p:selectOneMenu>
