--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
@@ -32,11 +32,11 @@
             </p:commandLink>
         </p:column>
     </p:dataTable>
-    <p:commandButton value="#{msgs.benutzergruppenHinzufuegen}"
-                     id="addUsergroup"
-                     action="#{ProzessverwaltungForm.userGroups}"
-                     oncomplete="PF('addUsergroupDialog').show()"
-                     icon="fa fa-plus-circle fa-lg"
-                     immediate="true"
-                     iconPos="right"/>
+    <button id="addUsergroup"
+            onclick="PF('addUsergroupDialog').show()"
+            type="button"
+            class="ui-button ui-widget ui-corner-all button-filled-green"
+            style="padding:.7em;border:none;">
+        #{msgs.benutzergruppenHinzufuegen}
+    </button>
 </ui:composition>
