--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroupsPopup.xhtml
@@ -36,7 +36,7 @@
                     </p:column>
                     <p:column headerText="#{msgs.auswahl}">
                         <p:commandLink id="addUsergroup" action="#{ProzessverwaltungForm.addUserGroup}"
-                                       update="taskEditForm:tabs:taskUsergroupTable">
+                                       update="taskEditForm:tabs:usergroupTable">
                             <h:graphicImage alt="add task to user group" value="/pages/images/buttons/addUser.gif"/>
                             <f:param name="ID" value="#{usergroup.id}"/>
                         </p:commandLink>
