Refactor new templates to always include message components

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
@@ -34,7 +34,7 @@
 
             <p:commandButton action="#{ProzessverwaltungForm.saveCurrentProperty}"
                              id="save"
-                             update="processEditForm"
+                             update="editForm"
                              oncomplete="PF('editPropertyDialog').hide()"
                              value="#{msgs.uebernehmen}">
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.editMode}"
