--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/taskEdit/taskEditUsergroups.xhtml
@@ -25,7 +25,7 @@
             <p:commandLink action="#{ProzessverwaltungForm.deleteUserGroup}"
                            id="deleteUsergroup"
                            immediate="true"
-                           update="taskEditForm:tabs:usergroupTable"
+                           update="editForm:tabs:usergroupTable"
                            title="#{msgs.removeUsergroup}">
                 <i class="fa fa-trash-o fa-lg"/>
                 <f:param name="ID" value="#{usergroup.id}"/>
