--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceEditPopup.xhtml
@@ -35,7 +35,7 @@
 
             <p:commandButton action="#{ProzessverwaltungForm.saveWorkpieceProperty}"
                              id="save"
-                             update="processEditForm"
+                             update="editForm"
                              oncomplete="PF('editWorkpieceDialog').hide()"
                              value="#{msgs.uebernehmen}">
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.editMode}"
