--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/taskList.xhtml
@@ -88,13 +88,16 @@
                 <f:param name="id" value="#{item.id}"/>
                 <i class="fa fa-pencil-square-o fa-lg"/>
             </h:link>
-            <h:commandLink id="deleteTask" title="#{msgs.loeschen}" action="#{ProzessverwaltungForm.deleteTask}"
-                           immediate="true" onclick="return confirm('#{msgs.sollDieserEintragWirklichGeloeschtWerden}')">
+            <p:commandLink id="deleteTask"
+                           title="#{msgs.loeschen}"
+                           action="#{ProzessverwaltungForm.removeTask}"
+                           immediate="true"
+                           update="taskTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener
                         target="#{ProzessverwaltungForm.task}"
                         value="#{item}"/>
-            </h:commandLink>
+            </p:commandLink>
         </p:column>
 
         <p:rowExpansion>
