added picklist style classes to css, modifies usergroup edit page

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -755,6 +755,23 @@ footer {
     box-sizing: border-box;
 }
 
+.ui-helper-clearfix::after {
+    display: none;
+}
+
+.ui-picklist .ui-picklist-list {
+    width: 100%;
+}
+
+.ui-picklist .ui-picklist-buttons {
+    width: 30px;
+}
+
+.ui-panelgrid-cell .ui-picklist {
+    width: 100%;
+    box-sizing: border-box;
+}
+
 .ui-commandlink.button-blue,
 .button-blue .ui-icon {
     color: #0071bc;
