Disable save button until input fields changed

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyEditPopup.xhtml
@@ -35,7 +35,7 @@
             <p:commandButton action="#{ProzessverwaltungForm.saveCurrentProperty}"
                              id="save"
                              update="editForm"
-                             oncomplete="PF('editPropertyDialog').hide()"
+                             oncomplete="PF('editPropertyDialog').hide();jQuery('#editForm\\:saveButtonToggler').click()"
                              value="#{msgs.uebernehmen}">
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.editMode}"
                                              value="#{objectMode.NONE}"/>
