--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/propertyList.xhtml
@@ -38,7 +38,10 @@
                 <h:outputText><i class="fa fa-files-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
             </p:commandLink>
-            <p:commandLink id="deleteProperty" title="#{msgs.loeschen}" action="#{ProzessverwaltungForm.deleteProperty}">
+            <p:commandLink id="deleteProperty"
+                           title="#{msgs.loeschen}"
+                           oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
+                           action="#{ProzessverwaltungForm.deleteProperty}">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.property}" value="#{item}"/>
             </p:commandLink>
