--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/templateEditPopup.xhtml
@@ -34,10 +34,9 @@
 
             <p:commandButton action="#{ProzessverwaltungForm.saveTemplateProperty}"
                              id="save"
-                             update="@form"
-                             oncomplete="PF('editTemplateDialog').hide()"
-                             value="#{msgs.uebernehmen}"
-                             ajax="false"/>
+                             update="processEditForm"
+                             oncomplete="PF('editTemplateDialog').hide();jQuery('#processEditForm\\:saveButtonToggler').click()"
+                             value="#{msgs.uebernehmen}"/>
         </h:form>
     </p:dialog>
 </ui:composition>
