--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processEdit/workpieceList.xhtml
@@ -35,6 +35,7 @@
             <p:commandLink id="deleteWorkpieceProperty"
                            title="#{msgs.loeschen}"
                            action="#{ProzessverwaltungForm.deleteWorkpieceProperty}"
+                           oncomplete="jQuery('#processEditForm\\:saveButtonToggler').click();"
                            update="workpiecePropertyTable">
                 <h:outputText><i class="fa fa-trash-o fa-lg"/></h:outputText>
                 <f:setPropertyActionListener target="#{ProzessverwaltungForm.workpieceProperty}" value="#{property}"/>
