--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/header.xhtml
@@ -26,7 +26,7 @@
 
         <section id="portal-search">
             <h:form id="search-form" action="">
-                <p:inputText id="search-field" a:placeholder="#{msgs.searchPlaceholder}" />
+                <p:inputText id="search-field" a:placeholder="#{msgs.searchPlaceholder}"/>
                 <button type="submit"><i class="fa fa-search"/></button>
             </h:form>
         </section>
@@ -38,32 +38,47 @@
                         <!-- List: my tasks -->
                         <c:set var="tasks" value="#{AktuelleSchritteForm.tasksInProgress}"/>
                         <a href="#"><i class="fa fa-bell-o fa-lg"/>
-                            <h:panelGroup rendered="#{tasks.size() gt 0}" styleClass="batch-count bc-alert">#{tasks.size()}</h:panelGroup>
+                            <h:panelGroup rendered="#{tasks.size() gt 0}"
+                                          styleClass="batch-count bc-alert">#{tasks.size()}</h:panelGroup>
                         </a>
                         <ul>
                             <li><h3>#{msgs.aktuelleSchritte}</h3></li>
                             <ui:repeat value="#{tasks}" var="task" size="#{tasks.size() gt 3 ? 3 : tasks.size()}">
-                                <li><a href=""><span class="nav-item-col">#{task.title}</span><span class="nav-item-col">#{task.process.title}</span><span class="nav-item-col"><i class="fa fa-check-square-o fa-lg nc-info"/></span></a></li>
+                                <li><a href=""><span class="nav-item-col">#{task.title}</span><span
+                                    class="nav-item-col">#{task.process.title}</span><span class="nav-item-col"><i
+                                    class="fa fa-check-square-o fa-lg nc-info"/></span></a></li>
                             </ui:repeat>
                             <li><h:link outcome="tasks" value="#{msgs.allMyTasks} (#{tasks.size()})"/></li>
                         </ul>
                     </li>
                     <li>
                         <!-- List: active users -->
-                        <a href="#"><i class="fa fa-user-o fa-lg"/><h:panelGroup rendered="#{SessionForm.activeSessions.size() gt 0}" class="batch-count bc-info">#{SessionForm.activeSessions.size()}</h:panelGroup></a>
+                        <a href="#"><i class="fa fa-user-o fa-lg"/><h:panelGroup
+                            rendered="#{SessionForm.activeSessions.size() gt 0}"
+                            class="batch-count bc-info">#{SessionForm.activeSessions.size()}</h:panelGroup></a>
                         <ul>
                             <li><h3>#{msgs.aktiveBenutzer}</h3></li>
-                            <ui:repeat value="#{SessionForm.activeSessions.subList(0, (SessionForm.activeSessions.size() gt 3) ? 3 : SessionForm.activeSessions.size())}" var="activeSession">
+                            <ui:repeat
+                                value="#{SessionForm.activeSessions.subList(0, (SessionForm.activeSessions.size() gt 3) ? 3 : SessionForm.activeSessions.size())}"
+                                var="activeSession">
                                 <li><a href=""><span class="nav-item-col">#{activeSession['userName']}</span></a></li>
                             </ui:repeat>
-                            <li><h:link outcome="activeUsers" value="#{msgs.allActiveUsers} (#{SessionForm.activeSessions.size()})"/></li>
+                            <li><h:link outcome="activeUsers"
+                                        value="#{msgs.allActiveUsers} (#{SessionForm.activeSessions.size()})"/></li>
                         </ul>
                     </li>
                     <li>
                         <!-- Dashboard menu -->
                         <a href="#" id="dashboard-menu"><i class="fa fa-th fa-lg"/></a>
                         <ul>
-                            <li><h3>#{msgs.dashboard}<h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
+                            <li>
+                                <h3>#{msgs.dashboard}
+                                    <h:outputText
+                                        rendered="#{SecurityAccessController.hasAuthorityGlobally('admin_GLOBAL')}">
+                                        <i>(Admin)</i>
+                                    </h:outputText>
+                                </h3>
+                            </li>
                             <li class="nav-pic-text"><h:link value="#{msgs.schritte}" id="linkTasks" outcome="tasks"><i
                                 class="fa fa-bell fa-lg"/></h:link></li>
                             <li class="nav-pic-text"><h:link value="#{msgs.prozesse}" id="linkProcesses"
@@ -91,9 +106,12 @@
                         <a href="#" id="user-menu"><i class="fa fa-user-circle-o fa-lg"/></a>
                         <h:form id="logout-form">
                             <ul id="nav-user">
-                                <li><h3>#{LoginForm.myBenutzer.name} #{LoginForm.myBenutzer.surname}<h:outputText rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText></h3></li>
+                                <li><h3>#{LoginForm.myBenutzer.name} #{LoginForm.myBenutzer.surname}<h:outputText
+                                    rendered="#{LoginForm.maximaleBerechtigung == 1}"> <i>(Admin)</i></h:outputText>
+                                </h3></li>
                                 <li><h:link value="#{msgs.userData}" outcome="userConfiguration"/></li>
-                                <li><h:outputLink value="#{request.contextPath}/logout" id="logout">#{msgs.logout}</h:outputLink></li>
+                                <li><h:outputLink value="#{request.contextPath}/logout"
+                                                  id="logout">#{msgs.logout}</h:outputLink></li>
                             </ul>
                         </h:form>
                     </li>
