added min-width to selectonemenu

--- a/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
+++ b/Kitodo/src/main/webapp/WEB-INF/resources/css/kitodo.css
@@ -795,6 +795,10 @@ footer {
     border-left: none !important;
 }
 
+.ui-selectonemenu {
+    min-width: 0 !important;
+}
+
 .ui-selectonemenu .ui-selectonemenu-trigger .ui-icon {
     background: transparent;
 }
