fixing Bug when calling metadataEditor page

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/projects/templateList.xhtml
@@ -32,7 +32,7 @@
         <p:column headerText="#{msgs.auswahl}" styleClass="actionsColumn">
             <h:outputText>
                 <h:link id="editProcess" outcome="/pages/processEdit"
-                        title="#{msgs.prozessBearbeiten}">
+                        title="#{msgs.editTemplate}">
                     <i class="fa fa-pencil-square-o fa-lg"/>
                     <f:param name="id" value="#{item.id}"/>
                 </h:link>
