Disable save button on userEdit.xhtml

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/userEdit/userEditPopup.xhtml
@@ -40,6 +40,7 @@
                                            action="#{BenutzerverwaltungForm.addToGroup}"
                                            title="add to user group"
                                            update="editForm">
+                                           oncomplete="jQuery('#editForm\\:saveButtonToggler').click()">
                                 <i class="fa fa-user-plus fa-lg"/>
                                 <f:param name="ID" value="#{item.id}"/>
                             </p:commandLink>
