form layout for process data edit

--- a/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processAdditionalDataEdit.xhtml
+++ b/Kitodo/src/main/webapp/WEB-INF/templates/includes/processFromTemplate/processAdditionalDataEdit.xhtml
@@ -24,11 +24,14 @@
                 <div>
                     <p:outputLabel value="#{field.title}:"/>
                     <p:inputText value="#{field.value}" styleClass="prozessKopieFeldbreite"
-                                 rendered="#{field.selectList==null}" class="input" required="#{field.required}"/>
+                                 rendered="#{field.selectList==null}" class="input" required="#{field.required}">
+                        <p:ajax event="change"/>
+                    </p:inputText>
                     <p:selectOneListbox value="#{field.value}" styleClass="prozessKopieFeldbreite"
                                         rendered="#{field.selectList!=null}" class="input"
                                         required="#{field.required}">
                         <f:selectItems value="#{field.selectList}"/>
+                        <p:ajax event="change"/>
                     </p:selectOneListbox>
                 </div>
 
